# Ask

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  _random.py  app.py  ask-old.py  ask-watch.py  ask.py  db.db  main.ask  new_lexer.py  pyproject.toml  requirements.txt  syntax.ask  test.py  test_ask.py
.circleci/: config.yml
Examples/: ask1.ask  crud.ask  example.ask  login-ask.ask  login-flask.py  notes.ask  test.ask  test1.ask
SyntaxHighlighting/ask-lang/: build.gradle  settings.gradle
SyntaxHighlighting/ask-lang/src/main/java/org/ask/sdk/language/: Ask.bnf  AskFileType.java  AskIcons.java  AskLanguage.java
SyntaxHighlighting/ask-lang/src/main/java/org/ask/sdk/language/psi/: AskElementType.java  AskTokenType.java
ask/: __init__.py  __main__.py  ask.py  cfg.py  errors.py  lexer.py  parser.py
ask/tests/: test_ask.py
ask/tests/transpiler/: test_errors.py  test_lexer.py  test_parser.py  test_transpiler.py
ask/tests/transpiler/utilities/: test_lexer_utils.py  test_parser_utils.py  test_small_transpilers.py  test_transpiler_utils.py
ask/tests/utilities/: test_file_utils.py  test_utils.py
ask/transpiler/: errors.py  lexer.py  parser.py  transpiler.py
ask/transpiler/tests/: __init__.py  test_errors.py  test_lexer.py  test_parser.py  test_transpiler.py
ask/transpiler/utilities/: lexer_utils.py  parser_utils.py  small_transpilers.py  transpiler_utils.py
ask/transpiler/utilities/tests/: __init__.py  test_lexer_utils.py  test_parser_utils.py  test_small_transpilers.py  test_transpiler_utils.py
ask/utilities/: file_utils.py  lexer_utils.py  transpiler_utils.py  utils.py
ask/utilities/tests/: __init__.py  test_file_utils.py  test_utils.py
ask_lang/: __init__.py  __main__.py  cfg.py
ask_lang/tests/: test__main__.py
ask_lang/tests/transpiler/: test_lexer.py  test_parser.py  test_translator.py
ask_lang/tests/transpiler/utilities/: test_lexer_utils.py  test_parser_utils.py  test_small_transpilers.py  test_translator_utils.py  test_transpiler_utils.py
ask_lang/tests/utilities/: test_askfile.py  test_file_utils.py  test_files.py  test_utils.py
ask_lang/transpiler/: errors.py  lexer.py  parser.py  translator.py  transpiler.py
ask_lang/transpiler/utilities/: lexer_utils.py  parser_utils.py  small_transpilers.py  translator_utils.py  transpiler_utils.py
ask_lang/utilities/: askfile.py  file_utils.py  files.py  printing.py  serve_run.py  utils.py
docs/: package-lock.json  package.json
docs/public/: colors.css  config.json  index.html
docs/src/: App.vue  main.js
docs/src/components/: ContentRoot.vue  Doc.vue  Navbar.vue  Sidebar.vue
docs/src/views/: Index.vue
