[tool.poetry]
name = "ask_lang"
version = "1.4.4"
description = "Ask is a modern open-source transpiled programming language, designed for building backend services and APIs. Ask reduces the amount of needed boilerplate code for setting up things like database connections and authentication to virtually zero lines."
authors = ["Edvard Busck-Nielsen <me@edvard.dev>"]
license = "GNU GPL v3.0"
readme = "README.md"
homepage = "https://ask-lang.org"
repository = "https://github.com/Buscedv/Ask"
keywords = ["ask", "programming language", "backend", 'api', 'rest', 'tool']
include = [
    "LICENSE",
]
classifiers = [
	"Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flask",
    "Operating System :: OS Independent",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Programming Language :: Python :: 3.8",
	"Topic :: Software Development",
	"Topic :: Software Development :: Build Tools",
	"Topic :: Software Development :: Version Control :: Git",
	"Topic :: Software Development :: Code Generators",
	"Topic :: Software Development :: Compilers",
	"Topic :: Software Development :: Pre-processors",
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
Flask-Limiter = "^1.4"
Flask-SQLAlchemy = "^2.4.4"
Jinja2 = "^2.11.3"
limits = "^1.5.1"
six = "^1.15.0"
SQLAlchemy = "^1.3.23"
PyMySQL = "^1.0.2"
Flask-Selfdoc = "^1.2.3"
# Don't update PyJWT, it breaks in future releases!
PyJWT = "2.4.0"
toml = "^0.10.2"
waitress = "^1.4.4"
Paste = "^3.5.0"
tabulate = "^0.8.8"
abnex = "1.0.2"
requests = "^2.25.1"
coverage = "^5.5"
Flask-Mail = "^0.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ask = 'ask_lang:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
